# posting_webapp

./: .gitignore  bun.lockb  nuxt.config.ts  package.json  types.ts
assets/css/: tailwind.css
backend/: main.py  pyproject.toml  requirements.txt
backend/backend/: models.py
components/: navbar.vue  post.vue
frontend/: README.md  nuxt.config.ts
frontend/assets/css/: tailwind.css
frontend/components/: navbar.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue  posts.vue  profile.vue
pages/: index.vue  posts.vue
stores/: user.ts
